<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="197dp"
        android:layout_height="190dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/foreground_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:textColor="@color/blue_default"
        android:textColorHint="@color/background"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <Button
        android:id="@+id/SignInButton"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:background="@color/blue_default"
        android:text="@string/signIn"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <EditText
        android:id="@+id/usernameEditText"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHint="@color/background"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:text="@string/recuperar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignInButton" />

    <Button
        android:id="@+id/SignupForButton"
        android:layout_width="313dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:background="#00FFFFFF"
        android:text="@string/SignUpFor"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/blue_default"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordButton" />

</androidx.constraintlayout.widget.ConstraintLayout>