<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="197dp"
        android:layout_height="190dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/foreground_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="48dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:textColor="@color/blue_default"
        android:textColorHighlight="@color/blue_default"
        android:textColorHint="@color/background"
        android:textColorLink="@color/orange_default"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailEditText" />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="48dp"
        android:background="@color/blue_default"
        android:text="@string/signUp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="45dp"
        android:layout_height="32dp"
        android:layout_marginTop="54dp"
        android:src="@drawable/account_icon"
        app:layout_constraintEnd_toStartOf="@+id/nameEditText"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="45dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/username_icon"
        app:layout_constraintEnd_toStartOf="@+id/nameEditText"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="45dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/mail_icon"
        app:layout_constraintEnd_toStartOf="@+id/nameEditText"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/password_icon"
        app:layout_constraintEnd_toStartOf="@+id/nameEditText"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/nameEditText"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="48dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/blue_default"
        android:textColorHighlight="@color/blue_default"
        android:textColorHint="@color/background"
        android:textColorLink="@color/orange_default"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/usernameEditText"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="48dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/blue_default"
        android:textColorHighlight="@color/blue_default"
        android:textColorHint="@color/background"
        android:textColorLink="@color/orange_default"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/mailEditText"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="48dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/blue_default"
        android:textColorHighlight="@color/blue_default"
        android:textColorHint="@color/background"
        android:textColorLink="@color/orange_default"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>